--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "control",
   "version": "1.0.0",
-  "description": "react library for creating animations",
+  "description": "React library for creating animations",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
@@ -11,9 +11,12 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs"
   },
+  "files": [
+    "./dist"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ostrekodowanie/ControlJS.git"
+    "url": "https://github.com/ostrekodowanie/ControlJS.git"
   },
   "keywords": [
     "animations",
@@ -31,5 +34,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
